# sudoku

./: .gitignore  CMakeLists.txt  README.md  file.c  main.c  sudoku.h
sudokuFiles/gameLogic/: gameLogic.c  gameLogic.h
sudokuFiles/getDifficulty/: difficulty.h  diffuculty.c
sudokuFiles/getUserName/: getUserName.c  getUserName.h
sudokuFiles/printFields/: printFields.c  printFields.h
sudokuFiles/randomNumbers/: fillingWithRandomNums.c  fillingWithRandomNums.h
sudokuFiles/setDifficulty/: setDifficulty.c  setDifficulty.h
sudokuFiles/setValue/: setValue.h  settingValue.c
